--- a/src/layout/topbar.html
+++ b/src/layout/topbar.html
@@ -37,9 +37,9 @@
       </div>
     </div>
   </div>
-  <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype=http://schema.org/BreadcrumbList>
-    <li itemscope itemtype=https://schema.org/ListItem itemprop=itemListElement>
-      <span itemprop=name>
+  <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope="" itemtype="http://schema.org/BreadcrumbList">
+    <li itemscope="" itemtype="https://schema.org/ListItem" itemprop="itemListElement">
+      <span itemprop="name">
         Splunk Observability Workshops
       </span>
       <meta itemprop=position content="1">
