--- a/src/layout/topbar.html
+++ b/src/layout/topbar.html
@@ -37,29 +37,9 @@
       </div>
     </div>
   </div>
-  <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope="" itemtype="http://schema.org/BreadcrumbList">
-    <li itemscope="" itemtype="https://schema.org/ListItem" itemprop="itemListElement">
-      <span itemprop="name">
-        Splunk Observability Workshops
-      </span>
-      <meta itemprop=position content="1">
-    </li>
+  <ol id="breadcrumbs" class="topbar-breadcrumbs breadcrumbs highlightable" itemscope="" itemtype="http://schema.org/BreadcrumbList">
   </ol>
   <div class="topbar-area topbar-area-end" data-area=end>
-    <div 
-      class="topbar-button topbar-button-print" 
-      data-content-empty=disable 
-      data-width-s=area-more
-      data-width-m=show data-width-l=show
-    >
-      <a
-        class="topbar-control" 
-        href="/o11y-workshop-kr/v5.83/en/index.print.html"
-        title="Print whole chapter (CTRL+ALT+p)"
-      >
-        <i class="fa-fw fas fa-print"></i>
-      </a>
-    </div>
     <div 
       class="topbar-button topbar-button-prev" 
       data-content-empty=disable 
