--- a/src/layout/sidebar.html
+++ b/src/layout/sidebar.html
@@ -85,7 +85,7 @@
   <div id="R-content-wrapper" class="highlightable">
     <div id="R-shortcutmenu-home" class="R-sidebarmenu">
       <ul class="enlarge morespace collapsible-menu">
-        <li data-nav-id="/workshop/src/html/ITSI4Rookies/index.html">
+        <li data-nav-id="/workshop/src/ITSI4Rookies/index.html">
           <input 
             type="checkbox" 
             id="R-section-14502dc75e54f9828d57d57cc330bbac"
@@ -95,7 +95,7 @@
             <i class="fa-fw fas fa-chevron-right"></i>
             <span class="a11y-only">Submenu ITSI4Rookies🐥</span>
           </label>
-          <a class="padding" href="/workshop/src/html/ITSI4Rookies/index.html">
+          <a class="padding" href="/workshop/src/ITSI4Rookies/index.html">
             ITSI4Rookies🐥
             <i class="fa-fw fas fa-check read-icon"></i>
           </a>
@@ -848,60 +848,83 @@
                 <i class="fa-fw fas fa-check read-icon"></i>
             </a>
             <ul id="R-subsections-edd2eece8dea6b95fb15eaa5424a8093" class="collapsible-menu">
-                <li
-                    data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/index.html">
-                    <input type="checkbox" id="R-section-1c68b6251cc83a85685062f6c1493934"
-                        aria-controls="R-subsections-1c68b6251cc83a85685062f6c1493934"><label
-                        for="R-section-1c68b6251cc83a85685062f6c1493934"><i
-                            class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">Submenu Automatic
-                            Discovery Workshops</span></label><a class="padding"
-                        href="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/index.html">Automatic
-                        Discovery Workshops<i class="fa-fw fas fa-check read-icon"></i></a>
-                    <ul id="R-subsections-1c68b6251cc83a85685062f6c1493934" class="collapsible-menu">
-                        <li
-                            data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/index.html">
-                            <input type="checkbox" id="R-section-1cec921802e537ea630f1af4caee7fef"
-                                aria-controls="R-subsections-1cec921802e537ea630f1af4caee7fef"><label
-                                for="R-section-1cec921802e537ea630f1af4caee7fef"><i
-                                    class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">Submenu
-                                    PetClinic Monolith Workshop</span></label><a class="padding"
-                                href="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/index.html">PetClinic
-                                Monolith Workshop<i class="fa-fw fas fa-check read-icon"></i></a>
-                            <ul id="R-subsections-1cec921802e537ea630f1af4caee7fef"
-                                class="collapsible-menu">
-                                <li
-                                    data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/1-otel-collector/index.html">
-                                    <a class="padding"
-                                        href="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/1-otel-collector/index.html">1.
-                                        OpenTelemetry Collector<i
-                                            class="fa-fw fas fa-check read-icon"></i></a>
-                                </li>
-                                <li
-                                    data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/2-building-petclinic/index.html">
-                                    <a class="padding"
-                                        href="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/2-building-petclinic/index.html">2.
-                                        Building PetClinic<i class="fa-fw fas fa-check read-icon"></i></a>
-                                </li>
-                                <li
-                                    data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/3-auto-discovery/index.html">
-                                    <a class="padding"
-                                        href="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/3-auto-discovery/index.html">3.
-                                        Automatic Discovery<i class="fa-fw fas fa-check read-icon"></i></a>
-                                </li>
-                                <li
-                                    data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/4-rum/index.html">
-                                    <a class="padding"
-                                        href="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/4-rum/index.html">3.
-                                        Real User Monitoring<i class="fa-fw fas fa-check read-icon"></i></a>
-                                </li>
-                                <li
-                                    data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/5-log-observer/index.html">
-                                    <a class="padding"
-                                        href="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/5-log-observer/index.html">4.
-                                        Log Observer<i class="fa-fw fas fa-check read-icon"></i></a>
-                                </li>
-                            </ul>
+                <li data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/index.html">
+                  <input 
+                    type="checkbox" 
+                    id="R-section-1c68b6251cc83a85685062f6c1493934"
+                    aria-controls="R-subsections-1c68b6251cc83a85685062f6c1493934"
+                  >
+                  <label for="R-section-1c68b6251cc83a85685062f6c1493934">
+                    <i class="fa-fw fas fa-chevron-right"></i>
+                    <span class="a11y-only">Submenu Automatic Discovery Workshops</span>
+                  </label>
+                  <a 
+                    class="padding"
+                    href="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/index.html"
+                  >
+                    Automatic Discovery Workshops
+                    <i class="fa-fw fas fa-check read-icon"></i>
+                  </a>
+                  <ul id="R-subsections-1c68b6251cc83a85685062f6c1493934" class="collapsible-menu">
+                    <li data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/index.html">
+                      <input 
+                        type="checkbox" 
+                        id="R-section-1cec921802e537ea630f1af4caee7fef"
+                        aria-controls="R-subsections-1cec921802e537ea630f1af4caee7fef"
+                      >
+                      <label for="R-section-1cec921802e537ea630f1af4caee7fef">
+                        <i class="fa-fw fas fa-chevron-right"></i>
+                        <span class="a11y-only">Submenu PetClinic Monolith Workshop</span>
+                      </label>
+                      <a 
+                        class="padding"
+                        href="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/index.html"
+                      >
+                        PetClinic Monolith Workshop
+                        <i class="fa-fw fas fa-check read-icon"></i>
+                      </a>
+                      <ul 
+                        id="R-subsections-1cec921802e537ea630f1af4caee7fef"
+                        class="collapsible-menu"
+                      >
+                        <li data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/1-otel-collector/index.html">
+                          <a 
+                            class="padding"
+                            href="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/1-otel-collector/index.html"
+                          >
+                            1. OpenTelemetry Collector
+                            <i class="fa-fw fas fa-check read-icon"></i>
+                          </a>
                         </li>
+                        <li data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/2-building-petclinic/index.html">
+                          <a 
+                            class="padding"
+                            href="/workshop/src/ninja-workshop/index.html"
+                          >
+                            2. Building PetClinic
+                            <i class="fa-fw fas fa-check read-icon"></i>
+                          </a>
+                        </li>
+                        <li
+                            data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/3-auto-discovery/index.html">
+                            <a class="padding"
+                                href="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/3-auto-discovery/index.html">3.
+                                Automatic Discovery<i class="fa-fw fas fa-check read-icon"></i></a>
+                        </li>
+                        <li
+                            data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/4-rum/index.html">
+                            <a class="padding"
+                                href="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/4-rum/index.html">3.
+                                Real User Monitoring<i class="fa-fw fas fa-check read-icon"></i></a>
+                        </li>
+                        <li
+                            data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/5-log-observer/index.html">
+                            <a class="padding"
+                                href="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/5-log-observer/index.html">4.
+                                Log Observer<i class="fa-fw fas fa-check read-icon"></i></a>
+                        </li>
+                    </ul>
+                  </li>
                         <li
                             data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/2-petclinic-kubernetes/index.html">
                             <input type="checkbox" id="R-section-c3e2e018011f9ff735444c4d31e8814c"
