top edit & side turning back

--- a/src/layout/sidebar.html
+++ b/src/layout/sidebar.html
@@ -68,6 +68,8 @@
           </g>
         </svg></a></div>
     <div><img src="/workshop/src/images/pwny-kr.webp"></div>
+    <!-- <script>window.index_js_url = "/o11y-workshop-kr/v5.83/searchindex.en.js?1740139255"</script>
+      -->
   </div>
   <div id="R-homelinks" class="default-animation homelinks">
     <ul>
@@ -82,7 +84,7 @@
   </div>
   <div id="R-content-wrapper" class="highlightable">
     <div id="R-shortcutmenu-home" class="R-sidebarmenu">
-      <ul class="enlarge morespace collapsible-menu"></ul>
+      <ul class="enlarge morespace collapsible-menu">
         <li data-nav-id="/workshop/src/ITSI4Rookies/index.html">
           <input 
             type="checkbox" 
@@ -2178,7 +2180,7 @@
                 </li>
             </ul>
         </li>
-      </ul>  
+      </ul>
     </div>
     
     <div class="padding footermargin footerLangSwitch footerVariantSwitch footerVisitedLinks footerFooter showLangSwitch showVariantSwitch showVisitedLinks showFooter">
