--- a/src/layout/topbar.html
+++ b/src/layout/topbar.html
@@ -50,6 +50,7 @@
       data-action="show"
     >
       <a 
+        id="topbar-control-prev"
         class="topbar-control"
         href="/observability-workshop/v5.83/en/ninja-workshops/1-automatic-discovery/2-petclinic-kubernetes/4-apm/2-apm-data/index.html"
         title="Viewing the data in Splunk APM (🡐)"
@@ -68,6 +69,7 @@
       data-action="show"
     >
       <a 
+        id="topbar-control-next"
         class="topbar-control"
         href="/observability-workshop/v5.83/en/ninja-workshops/1-automatic-discovery/2-petclinic-kubernetes/5-traces/1-service-map/index.html"
         title="APM Service Map (🡒)"
