--- a/src/layout/topbar.html
+++ b/src/layout/topbar.html
@@ -52,8 +52,8 @@
       <a 
         id="topbar-control-prev"
         class="topbar-control"
-        href="/observability-workshop/v5.83/en/ninja-workshops/1-automatic-discovery/2-petclinic-kubernetes/4-apm/2-apm-data/index.html"
-        title="Viewing the data in Splunk APM (🡐)"
+        href=""
+        title=""
       >
         <i class="fa-fw fas fa-chevron-left"></i>
       </a>
@@ -71,8 +71,8 @@
       <a 
         id="topbar-control-next"
         class="topbar-control"
-        href="/observability-workshop/v5.83/en/ninja-workshops/1-automatic-discovery/2-petclinic-kubernetes/5-traces/1-service-map/index.html"
-        title="APM Service Map (🡒)"
+        href=""
+        title=""
       >
         <i class="fa-fw fas fa-chevron-right"></i>
       </a>
