--- a/src/templates/content.html
+++ b/src/templates/content.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang=en dir=ltr itemscope itemtype=http://schema.org/Article data-r-output-format=html>
+<html lang="ko" dir="ltr" itemscope="" itemtype="http://schema.org/Article" data-r-output-format="html">
 
 <head>
-  <meta charset=utf-8>
-  <meta name=viewport content="height=device-height,width=device-width,initial-scale=1,minimum-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="height=device-height,width=device-width,initial-scale=1,minimum-scale=1">
   <title>TODO: CONTENT TITLE GOES HERE</title>
   <style>
     :root {
@@ -13,12 +13,10 @@
   </style>
   <script src="/workshop/src/js/includes.js"></script>
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      _com.setPage();
-    });
+    document.addEventListener('DOMContentLoaded', () => _com.setPage('TODO: page ID goes here'))
   </script>
 </head>
-<body class="mobile-support html disableInlineCopyToClipboard">
+<body class="mobile-support html disableInlineCopyToClipboard" data-url="TODO: html href goes here">
   <div id="R-body" class="default-animation">
     <div id="R-body-overlay"></div>
     <nav id="R-topbar"></nav>
