--- a/src/templates/content.html
+++ b/src/templates/content.html
@@ -13,7 +13,10 @@
   </style>
   <script src="/workshop/src/js/includes.js"></script>
   <script>
-    document.addEventListener('DOMContentLoaded', () => _com.setPage('TODO: page ID goes here'))
+    document.addEventListener('DOMContentLoaded', () => {
+      // TODO: call set page function
+      // _com.setPage('TODO: page ID goes here')
+    });
   </script>
 </head>
 <body class="mobile-support html disableInlineCopyToClipboard" data-url="TODO: html href goes here">
