--- a/src/layout/sidebar.html
+++ b/src/layout/sidebar.html
@@ -1,7 +1,7 @@
 <div id="R-header-topbar" class="default-animation"></div>
   <div id="R-header-wrapper" class="default-animation">
     <div id="R-header" class="default-animation">
-      <a id="logo" href="/workshop/index.html">
+      <a id="logo" href="/o11y-workshop-kr/index.html">
         <svg
           xmlns:xlink="http://www.w3.org/1999/xlink" id="body_1" width="250" height="99">
           <g transform="matrix(0.04881859 0 0 0.04869651 0 0)">
@@ -69,12 +69,12 @@
         </svg>
       </a>
     </div>
-    <div><img src="/workshop/src/images/pwny-kr.webp"></div>
+    <div><img src="/o11y-workshop-kr/src/images/pwny-kr.webp"></div>
   </div>
   <div id="R-homelinks" class="default-animation homelinks">
     <ul>
       <li>
-        <a class="padding" href="/workshop/index.html">
+        <a class="padding" href="/o11y-workshop-kr/index.html">
           <i class="fa-fw fas fa-home"></i> 
           Home
         </a>
@@ -85,7 +85,7 @@
   <div id="R-content-wrapper" class="highlightable">
     <div id="R-shortcutmenu-home" class="R-sidebarmenu">
       <ul class="enlarge morespace collapsible-menu">
-        <li data-nav-id="/workshop/src/ITSI4Rookies/index.html">
+        <li data-nav-id="/o11y-workshop-kr/src/ITSI4Rookies/index.html">
           <input 
             type="checkbox" 
             id="R-section-14502dc75e54f9828d57d57cc330bbac"
@@ -95,7 +95,7 @@
             <i class="fa-fw fas fa-chevron-right"></i>
             <span class="a11y-only">Submenu ITSI4Rookies🐥</span>
           </label>
-          <a class="padding" href="/workshop/src/ITSI4Rookies/index.html">
+          <a class="padding" href="/o11y-workshop-kr/src/ITSI4Rookies/index.html">
             ITSI4Rookies🐥
             <i class="fa-fw fas fa-check read-icon"></i>
           </a>
@@ -899,7 +899,7 @@
                         <li data-nav-id="/o11y-workshop-kr/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/2-building-petclinic/index.html">
                           <a 
                             class="padding"
-                            href="/workshop/src/ninja-workshop/index.html"
+                            href="/o11y-workshop-kr/src/ninja-workshop/index.html"
                           >
                             2. Building PetClinic
                             <i class="fa-fw fas fa-check read-icon"></i>
