--- a/src/layout/sidebar.html
+++ b/src/layout/sidebar.html
@@ -69,7 +69,7 @@
         </svg>
       </a>
     </div>
-    <div><img src="/o11y-workshop-kr/src/images/pwny-kr.webp"></div>
+    <div><img src="/o11y-workshop-kr/src/images/pwny-kr.webp" width=200></div>
   </div>
   <div id="R-homelinks" class="default-animation homelinks">
     <ul>
