--- a/src/layout/sidebar.html
+++ b/src/layout/sidebar.html
@@ -96,181 +96,17 @@
                     <i class="fa-fw fas fa-check read-icon"></i>
                 </a>
                 <ul id="R-subsections-14502dc75e54f9828d57d57cc330bbac" class="collapsible-menu">
-                    <li data-nav-id="/o11y-workshop-kr/v5.83/kr/ITSI4Rookies/service-insights/README.md">
+                    <li data-nav-id="/o11y-workshop-kr/src/ITSI4Rookies/service-insights/README.md">
                         <input type="checkbox" id="R-section-fc29800edf936baccfbe8ba9f1fbf169"
                             aria-controls="R-subsections-fc29800edf936baccfbe8ba9f1fbf169">
                         <label for="R-section-fc29800edf936baccfbe8ba9f1fbf169">
                             <i class="fa-fw fas fa-chevron-right"></i>
                             <span class="a11y-only">Submenu Service Insights</span>
                         </label>
-                        <a class="padding" href="/o11y-workshop-kr/v5.83/kr/ITSI4Rookies/service-oinsights/README.md">
+                        <a class="padding" href="/o11y-workshop-kr/src/ITSI4Rookies/service-insights/README.md">
                             Service Insights
                             <i class="fa-fw fas fa-check read-icon"></i>
                         </a>
-                        <ul id="R-subsections-fc29800edf936baccfbe8ba9f1fbf169" class="collapsible-menu">
-                            <li
-                                data-nav-id="/o11y-workshop-kr/v5.83/kr/ITSI4Rookies/optimize_monitoring/1-getting-started/index.html">
-                                <input type="checkbox" id="R-section-d4959d1e5f493670c28d9226afd284da"
-                                    aria-controls="R-subsections-d4959d1e5f493670c28d9226afd284da">
-                                <label for="R-section-d4959d1e5f493670c28d9226afd284da">
-                                    <i class="fa-fw fas fa-chevron-right"></i>
-                                    <span class="a11y-only">Submenu 1. Getting Started</span>
-                                </label>
-                                <a class="padding"
-                                    href="/o11y-workshop-kr/v5.83/kr/ITSI4Rookies/optimize_monitoring/1-getting-started/index.html">
-                                    1. Getting Started
-                                    <i class="fa-fw fas fa-check read-icon"></i>
-                                </a>
-                                <ul id="R-subsections-d4959d1e5f493670c28d9226afd284da" class="collapsible-menu">
-                                    <li
-                                        data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/1-getting-started/1-access-ec2/index.html">
-                                        <a class="padding"
-                                            href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/1-getting-started/1-access-ec2/index.html">
-                                            1.1 Access AWS/EC2 Instance
-                                            <i class="fa-fw fas fa-check read-icon"></i>
-                                        </a>
-                                    </li>
-                                    <li
-                                        data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/1-getting-started/2-deploy-application/index.html">
-                                        <a class="padding"
-                                            href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/1-getting-started/2-deploy-application/index.html">
-                                            1.2 Deploy OpenTelemetry Demo Application
-                                            <i class="fa-fw fas fa-check read-icon"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li
-                                data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/2-standardize-data-collection/index.html">
-                                <input type="checkbox" id="R-section-7f8e95cfd78388afa103f09f862d4c2b"
-                                    aria-controls="R-subsections-7f8e95cfd78388afa103f09f862d4c2b">
-                                <label for="R-section-7f8e95cfd78388afa103f09f862d4c2b">
-                                    <i class="fa-fw fas fa-chevron-right"></i>
-                                    <span class="a11y-only">
-                                        Submenu 2. Standardize Data Collection
-                                    </span>
-                                </label>
-                                <a class="padding"
-                                    href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/2-standardize-data-collection/index.html">
-                                    2. Standardize Data Collection
-                                    <i class="fa-fw fas fa-check read-icon"></i>
-                                </a>
-                                <ul id="R-subsections-7f8e95cfd78388afa103f09f862d4c2b" class="collapsible-menu">
-                                    <li
-                                        data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/2-standardize-data-collection/1-what-are-tags/index.html">
-                                        <a class="padding"
-                                            href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/2-standardize-data-collection/1-what-are-tags/index.html">
-                                            2.1 What Are Tags?
-                                            <i class="fa-fw fas fa-check read-icon"></i>
-                                        </a>
-                                    </li>
-                                    <li
-                                        data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/2-standardize-data-collection/2-adding-context-with-tags/index.html">
-                                        <a class="padding"
-                                            href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/2-standardize-data-collection/2-adding-context-with-tags/index.html">
-                                            2.2 Adding Context With Tags
-                                            <i class="fa-fw fas fa-check read-icon"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li
-                                data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/3-reuse-content-across-teams/index.html">
-                                <input type="checkbox" id="R-section-9bcc3ffed08dfc37aaa8b607c11126fa"
-                                    aria-controls="R-subsections-9bcc3ffed08dfc37aaa8b607c11126fa">
-                                <label for="R-section-9bcc3ffed08dfc37aaa8b607c11126fa">
-                                    <i class="fa-fw fas fa-chevron-right"></i>
-                                    <span class="a11y-only">
-                                        Submenu 3. Reuse Content Across Teams
-                                    </span>
-                                </label>
-                                <a class="padding"
-                                    href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/3-reuse-content-across-teams/index.html">
-                                    3. Reuse Content Across Teams
-                                    <i class="fa-fw fas fa-check read-icon"></i>
-                                </a>
-                                <ul id="R-subsections-9bcc3ffed08dfc37aaa8b607c11126fa" class="collapsible-menu">
-                                    <li
-                                        data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/3-reuse-content-across-teams/1-infrastructure-dashboards/index.html">
-                                        <a class="padding"
-                                            href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/3-reuse-content-across-teams/1-infrastructure-dashboards/index.html">
-                                            3.1 Infrastructure Navigators
-                                            <i class="fa-fw fas fa-check read-icon"></i>
-                                        </a>
-                                    </li>
-                                    <li
-                                        data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/3-reuse-content-across-teams/2-clone-dashboards/index.html">
-                                        <a class="padding"
-                                            href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/3-reuse-content-across-teams/2-clone-dashboards/index.html">
-                                            3.2 Dashboard Cloning
-                                            <i class="fa-fw fas fa-check read-icon"></i>
-                                        </a>
-                                    </li>
-                                    <li
-                                        data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/3-reuse-content-across-teams/3-mirror-dashboards/index.html">
-                                        <a class="padding"
-                                            href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/3-reuse-content-across-teams/3-mirror-dashboards/index.html">
-                                            3.3 Dashboard Mirroring
-                                            <i class="fa-fw fas fa-check read-icon"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li
-                                data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/4-correlate-metrics-logs/index.html">
-                                <input type="checkbox" id="R-section-68896939680aa3bca9439207012fa6f6"
-                                    aria-controls="R-subsections-68896939680aa3bca9439207012fa6f6">
-                                <label for="R-section-68896939680aa3bca9439207012fa6f6">
-                                    <i class="fa-fw fas fa-chevron-right"></i>
-                                    <span class="a11y-only">
-                                        Submenu 4. Correlate Metrics and Logs
-                                    </span>
-                                </label>
-                                <a class="padding"
-                                    href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/4-correlate-metrics-logs/index.html">
-                                    4. Correlate Metrics and Logs
-                                    <i class="fa-fw fas fa-check read-icon"></i>
-                                </a>
-                                <ul id="R-subsections-68896939680aa3bca9439207012fa6f6" class="collapsible-menu">
-                                    <li
-                                        data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/4-correlate-metrics-logs/1-correlate-metrics-and-logs/index.html">
-                                        <a class="padding"
-                                            href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/4-correlate-metrics-logs/1-correlate-metrics-and-logs/index.html">4.1
-                                            Correlate Metrics and Logs<i class="fa-fw fas fa-check read-icon"></i></a>
-                                    </li>
-                                    <li
-                                        data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/4-correlate-metrics-logs/2-create-log-based-chart/index.html">
-                                        <a class="padding"
-                                            href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/4-correlate-metrics-logs/2-create-log-based-chart/index.html">4.2
-                                            Create Log-based Chart<i class="fa-fw fas fa-check read-icon"></i></a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li
-                                data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/5-improve-alert-timeliness/index.html">
-                                <input type="checkbox" id="R-section-09de92bb32cd2a17078aefe25815eb13"
-                                    aria-controls="R-subsections-09de92bb32cd2a17078aefe25815eb13"><label
-                                    for="R-section-09de92bb32cd2a17078aefe25815eb13"><i
-                                        class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">Submenu
-                                        5. Improve Timeliness of Alerts</span></label><a class="padding"
-                                    href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/5-improve-alert-timeliness/index.html">5.
-                                    Improve Timeliness of Alerts<i class="fa-fw fas fa-check read-icon"></i></a>
-                                <ul id="R-subsections-09de92bb32cd2a17078aefe25815eb13" class="collapsible-menu">
-                                    <li
-                                        data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/5-improve-alert-timeliness/1-create-custom-detector/index.html">
-                                        <a class="padding"
-                                            href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/5-improve-alert-timeliness/1-create-custom-detector/index.html">5.1
-                                            Create Custom Detector<i class="fa-fw fas fa-check read-icon"></i></a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li
-                                data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/6-workshop-conclusion/index.html">
-                                <a class="padding"
-                                    href="/o11y-workshop-kr/v5.83/en/scenarios/optimize_monitoring/6-workshop-conclusion/index.html">6.
-                                    Conclusion<i class="fa-fw fas fa-check read-icon"></i></a>
-                            </li>
-                        </ul>
                     </li>
                     <li data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/index.html"><input
                             type="checkbox" id="R-section-bbb8e262703ede7b2cf07123800211b0"
