service insights sidebar

--- a/src/layout/sidebar.html
+++ b/src/layout/sidebar.html
@@ -95,6 +95,7 @@
                     ITSI4Rookies🐥
                     <i class="fa-fw fas fa-check read-icon"></i>
                 </a>
+                <!-- Service Insights 시작 -->
                 <ul id="R-subsections-14502dc75e54f9828d57d57cc330bbac" class="collapsible-menu">
                     <li data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/index.html"><input
                             type="checkbox" id="R-section-bbb8e262703ede7b2cf07123800211b0"
@@ -104,6 +105,7 @@
                             </span></label><a class="padding"
                             href="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/index.html">Service Insights<i
                                 class="fa-fw fas fa-check read-icon"></i></a>
+                        <!-- SKES 시작 -->
                         <ul id="R-subsections-bbb8e262703ede7b2cf07123800211b0" class="collapsible-menu">
                             <li data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/tagging/index.html">
                                 <input type="checkbox" id="R-section-90e0a73620e854133bc9dcaf0c9ba432"
@@ -128,8 +130,9 @@
                                     </li>
                                 </ul>
                             </li>
-                        </ul>
-                        <ul id="R-subsections-bbb8e262703ede7b2cf07123800211b0" class="collapsible-menu">
+
+                            <!-- Deep Dives 시작 -->
+
                             <li data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/tagging/index.html">
                                 <input type="checkbox" id="R-section-90e0a73620e854133bc9dcaf0c9ba432"
                                     aria-controls="R-subsections-90e0a73620e854133bc9dcaf0c9ba432"><label
@@ -153,8 +156,32 @@
                                     </li>
                                 </ul>
                             </li>
-                        </ul>
 
+                            <!-- Glass Tables 시작 -->
+                            <li data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/tagging/index.html">
+                                <input type="checkbox" id="R-section-90e0a73620e854133bc9dcaf0c9ba432"
+                                    aria-controls="R-subsections-90e0a73620e854133bc9dcaf0c9ba432"><label
+                                    for="R-section-90e0a73620e854133bc9dcaf0c9ba432"><i
+                                        class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">Submenu
+                                        Glass Tables</span></label><a class="padding"
+                                    href="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/tagging/index.html">Glass
+                                    Tables<i class="fa-fw fas fa-check read-icon"></i></a>
+                                <ul id="R-subsections-90e0a73620e854133bc9dcaf0c9ba432" class="collapsible-menu">
+                                    <li
+                                        data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/tagging/1-build-application/index.html">
+                                        <a class="padding"
+                                            href="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/tagging/1-build-application/index.html">1.
+                                            첫번째 핸즈온<i class="fa-fw fas fa-check read-icon"></i></a>
+                                        <a class="padding"
+                                            href="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/tagging/1-build-application/index.html">2.
+                                            두번째 핸즈온<i class="fa-fw fas fa-check read-icon"></i></a>
+                                        <a class="padding"
+                                            href="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/tagging/1-build-application/index.html">3.
+                                            세번째 핸즈온<i class="fa-fw fas fa-check read-icon"></i></a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
                     <li data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/index.html">
                         <input type="checkbox" id="R-section-bbb8e262703ede7b2cf07123800211b0"
                             aria-controls="R-subsections-bbb8e262703ede7b2cf07123800211b0"><label
