--- a/src/layout/sidebar.html
+++ b/src/layout/sidebar.html
@@ -97,23 +97,23 @@
                 </a>
                 <!-- Service Insights 시작 -->
                 <ul id="R-subsections-14502dc75e54f9828d57d57cc330bbac" class="collapsible-menu">
-                    <li data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/index.html"><input
+                    <li data-nav-id="/o11y-workshop-kr/src/ITSI4Rookies/1-service-insights/index.html"><input
                             type="checkbox" id="R-section-bbb8e262703ede7b2cf07123800211b0"
                             aria-controls="R-subsections-bbb8e262703ede7b2cf07123800211b0"><label
                             for="R-section-bbb8e262703ede7b2cf07123800211b0"><i
                                 class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">Submenu Service Insights
                             </span></label><a class="padding"
-                            href="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/index.html">Service Insights<i
+                            href="/o11y-workshop-kr/src/ITSI4Rookies/1-service-insights/index.html">Service Insights<i
                                 class="fa-fw fas fa-check read-icon"></i></a>
                         <!-- SKES 시작 -->
                         <ul id="R-subsections-bbb8e262703ede7b2cf07123800211b0" class="collapsible-menu">
-                            <li data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/tagging/index.html">
+                            <li data-nav-id="/o11y-workshop-kr/src/ITSI4Rookies/1-service-insights/1-1-skes/index.html">
                                 <input type="checkbox" id="R-section-90e0a73620e854133bc9dcaf0c9ba432"
                                     aria-controls="R-subsections-90e0a73620e854133bc9dcaf0c9ba432"><label
                                     for="R-section-90e0a73620e854133bc9dcaf0c9ba432"><i
                                         class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">Submenu
                                         Services / KPIs/ Entities / SHC</span></label><a class="padding"
-                                    href="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/tagging/index.html">Services
+                                    href="/o11y-workshop-kr/src/ITSI4Rookies/1-service-insights/1-1-skes/index.html">Services
                                     / KPIs/ Entities / SHC<i class="fa-fw fas fa-check read-icon"></i></a>
                                 <ul id="R-subsections-90e0a73620e854133bc9dcaf0c9ba432" class="collapsible-menu">
                                     <li
