side bar scroll

--- a/src/layout/sidebar.html
+++ b/src/layout/sidebar.html
@@ -81,7 +81,7 @@
     </ul>
     <hr class="padding">
 </div>
-<div id="R-content-wrapper" class="highlightable">
+<div id="R-content-wrapper" class="highlightable ps ps--active-y">
     <div id="R-shortcutmenu-home" class="R-sidebarmenu">
         <ul class="enlarge morespace collapsible-menu">
             <li data-nav-id="/o11y-workshop-kr/src/ITSI4Rookies/index.html">
