--- a/src/layout/sidebar.html
+++ b/src/layout/sidebar.html
@@ -81,7 +81,7 @@
     </ul>
     <hr class="padding">
 </div>
-<div id="R-content-wrapper" class="highlightable ps ps--active-y">
+<div id="R-content-wrapper" class="highlightable">
     <div id="R-shortcutmenu-home" class="R-sidebarmenu">
         <ul class="enlarge morespace collapsible-menu">
             <li data-nav-id="/o11y-workshop-kr/src/ITSI4Rookies/index.html">
@@ -2548,12 +2548,6 @@
             <br>
             <img
                 src="https://img.shields.io/github/v/release/splunk/o11y-workshop-kr?label=Workshop Version&color=e20082">
-        </div>
-        <div class="ps__rail-x" style="left: 0px; bottom: 0px;">
-          <div class="ps__thumb-x" tabindex="0" style="left: 0px;"></div>
-        </div>
-        <div class="ps__rail-y" style="top: 0px; height: 622px; right: 0px;">
-          <div class="ps__thumb-y" tabindex="0" style="top: 0px; height: 410px;"></div>
         </div>
     </div>
 </div>
