--- a/src/layout/sidebar.html
+++ b/src/layout/sidebar.html
@@ -182,6 +182,7 @@
                                 </ul>
                             </li>
                         </ul>
+                        <!-- Event Analytics 시작 -->
                     <li data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/debug_problems/index.html">
                         <input type="checkbox" id="R-section-bbb8e262703ede7b2cf07123800211b0"
                             aria-controls="R-subsections-bbb8e262703ede7b2cf07123800211b0"><label
@@ -349,6 +350,7 @@
                             </li>
                         </ul>
                     </li>
+                    <!-- RUM 시작 -->
                     <li data-nav-id="/o11y-workshop-kr/v5.83/en/scenarios/optimize_end_user_experiences/index.html">
                         <input type="checkbox" id="R-section-220767aa0a8e45f96530e8c2bd5961e5"
                             aria-controls="R-subsections-220767aa0a8e45f96530e8c2bd5961e5"><label
