--- a/src/layout/sidebar.html
+++ b/src/layout/sidebar.html
@@ -1,7 +1,7 @@
 <div id="R-header-topbar" class="default-animation"></div>
 <div id="R-header-wrapper" class="default-animation">
     <div id="R-header" class="default-animation">
-        <a id="logo" href="/o11y-workshop-kr/index.html">
+        <a id="logo">
             <svg xmlns:xlink="http://www.w3.org/1999/xlink" id="body_1" width="250" height="99">
                 <g transform="matrix(0.04881859 0 0 0.04869651 0 0)">
                     <path transform="matrix(1 0 0 1 1261 380)"
