--- a/src/layout/sidebar.html
+++ b/src/layout/sidebar.html
@@ -73,7 +73,7 @@
 <div id="R-homelinks" class="default-animation homelinks">
     <ul>
         <li>
-            <a class="padding" href="/o11y-workshop-kr/index.html">
+            <a id="homeIcon" class="padding">
                 <i class="fa-fw fas fa-home"></i>
                 Home
             </a>
